--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,9 +1,8 @@
 <IfModule mod_rewrite.c>
-Options +FollowSymLinks
 Options -MultiViews
 RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteRule ^ index.php [L]
 </IfModule>
